# Linkdrop

./: .gitignore  AGENTS.md  Cargo.toml  MANIFESTO.md  README.md  USER_MANUAL.md  linkdrop-v1-spec.md  llms.txt
.github/workflows/: ci.yml
crates/linkdrop-cli/: Cargo.toml
crates/linkdrop-cli/src/: lib.rs  main.rs
crates/linkdrop-cli/tests/: cli_flow.rs
crates/linkdrop-protocol/: Cargo.toml
crates/linkdrop-protocol/src/: crypto.rs  encoding.rs  error.rs  lib.rs  model.rs  state.rs
crates/linkdrop-server/: Cargo.toml
crates/linkdrop-server/src/: lib.rs  main.rs
crates/linkdrop-server/tests/: server_api.rs
