[package]
name = "linkdrop-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
linkdrop-protocol = { path = "../linkdrop-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
linkdrop-server = { path = "../linkdrop-server" }
tempfile.workspace = true
tokio.workspace = true

[[bin]]
name = "linkdrop"
path = "src/main.rs"
