[package]
name = "linkdrop-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
http.workspace = true
linkdrop-protocol = { path = "../linkdrop-protocol" }
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
